# mirassolBotSubirNotas

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: bot_subir_nf.md
src/main/: main.py
