[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.50.1",
    "botcity-framework-core>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyautogui>=0.9.54",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
